music player's not fixed on mobile screens

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -193,6 +193,7 @@
   }
 
   #music-container {
+    position: absolute;
     height: 200px;
   }
 
